--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			class="p-2 flex flex-col md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 ">
 			<div class="flex flex-row items-center justify-between">
 
-				<a href="index.html"><img src="./logo/image 74.png" alt="logo" class="h-full w-20">
+				<a href="index.html"><img src="public/image/logo.png" alt="logo" class="h-full w-20">
 				</a>
 
 
@@ -100,20 +100,20 @@
 	<!-- Main body  -->
 	<section id="about">
 
-		<div class="px-6 py-12 bg-gray-50 text-gray-800 text-center lg:text-left">
+		<div class="lg:px-6 px-4 lg:py-12 py-4 bg-gray-50 text-gray-800  lg:text-left">
 
-			<div class="container mx-auto xl:px-32">
-				<div class="grid lg:grid-cols-2 gap-6 flex items-center justify-center">
-					<div class="mb-12 lg:mb-0 sm:place-self-center">
+			<div class="container mx-auto ">
+				<div class="">
+					<!-- <div class="mb-12 lg:mb-0 sm:place-self-center">
 						<img src="public/img/logo2.webp" class="h-full w-full rounded-lg drop-shadow-2xl"
 							alt="logo 2 Img" />
-					</div>
-					<div class="mt-12 lg:mt-0">
-						<h1 class="lg:text-3xl text-lg font-semibold text-color capitalize lg:text-4xl p-2 text-center">
+					</div> -->
+					<div class="mt-4 lg:mt-0">
+						<h1 class="lg:text-3xl text-lg font-semibold text-color capitalize lg:text-4xl p-2 text-base">
 							Demo
 						</h1>
 						<p
-							class="font-family-class max-w-2xl mb-6 font-light text-black font-thin md:text-lg lg:text-xl  lg:p-6 p-2">
+							class="font-family-class  mb-6 font-light text-black font-thin md:text-lg lg:text-xl  lg:p-6 p-2">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cupiditate nemo ratione
 							aperiam nesciunt labore nobis nam dolore sunt! Hic qui, nihil facilis sit quas consequuntur
 							aperiam consequatur officia beatae. </p>
