--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="output.css" rel="stylesheet">
 
 	<title>Sachcha Prayas</title>
-	<link rel="icon" type="image/x-icon" href="public/img/Nivethan-icon.png" />
+	<link rel="icon" type="image/x-icon" href="public/image/logo.png" />
 
 </head>
 
@@ -55,7 +55,7 @@
 				<!-- ***** -->
 				<!-- <div @click.away="open = false" class="relative" x-data="{ open: false }">
 					<button @click="open = !open" aria-label="navbar-links"
-						class="text-white flex flex-row items-center w-full px-4 py-2 mt-2 text-base font-semibold text-left bg-transparent rounded-lg hover:text-black hover:bg-gray-50  md:w-auto md:inline md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline">
+						class="text-white flex flex-row items-center w-full px-4 py-2 mt-2 text-base font-semibold text-left bg-transparent rounded-lg hover:text-black hover:bg-gray-50  md:w-auto md:inline md:mt-0 md:ml-4 hover:text-white focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline">
 						<span>Programs</span>
 						<svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}"
 							class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform md:-mt-1">
@@ -130,16 +130,16 @@
 
 
 	<!-- footer  -->
-	<footer class="bg-gray-300 p-4" aria-labelledby="footer-heading">
-		<h2 id="footer-heading" class="sr-only">Footer</h2>
-		<div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-8 pt-2 lg:pt-12">
+	<footer class="header-background p-4 text-white" aria-labelledby="footer-heading">
+		<!-- <h2 id="footer-heading" class="sr-only">Footer</h2> -->
+		<div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-8 pt-2 lg:pt-12 text-white">
 			<div class="">
-				<div class="flex flex-col lg:flex-row justify-center lg:gap-20">
+				<div class="flex flex-col lg:flex-row justify-between lg:gap-20 gap-12">
 
 					<!-- 1111 -->
 					<div class="mt-2 xl:mt-0 max-w-xl">
-						<h3 class="text-lg font-semibold leading-6 text-color">Donate Now to Sachcha Prayas</h3>
-						<p class="mt-2 text-baseleading-6 text-black font-family-class">Lorem ipsum dolor sit, amet
+						<h3 class="text-lg font-semibold leading-6 text-white">Donate Now to Sachcha Prayas</h3>
+						<p class="mt-2 text-baseleading-6 text-white font-family-class">Lorem ipsum dolor sit, amet
 							consectetur adipisicing elit. Aperiam itaque dignissimos aliquid eaque modi error
 							accusantium tenetur dolor accusamus. Doloremque officiis expedita porro incidunt libero
 							dolores quis omnis nobis iusto.
@@ -151,22 +151,22 @@
 					</div>
 
 					<!-- 22222 -->
-					<div class="mt-2 xl:mt-0">
-						<h3 class="text-lg font-semibold leading-6 text-color">Contact Us</h3>
-						<p class="mt-2 text-baseleading-6 text-black font-family-class"> Demo</p>
-						<p class="mt-2 text-baseleading-6 text-black font-family-class">Madhya Pradesh</p>
-						<p class="mt-2 text-baseleading-6 text-black font-family-class"> 653627282</p>
-						<p class="mt-2 text-baseleading-6 text-black font-family-class">@gmail.com</p>
+					<div class="mt-2 xl:mt-0 text-white">
+						<h3 class="text-lg font-semibold leading-6 ">Contact Us</h3>
+						<p class="mt-2 text-baseleading-6 font-family-class"> Demo</p>
+						<p class="mt-2 text-baseleading-6 font-family-class">Madhya Pradesh</p>
+						<p class="mt-2 text-baseleading-6 font-family-class"> 653627282</p>
+						<p class="mt-2 text-baseleading-6 font-family-class">@gmail.com</p>
 
 					</div>
 				</div>
-
-
 			</div>
+
+
 			<div
-				class="mt-16 border-t border-black/20 pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
+				class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
 				<div class="flex space-x-6 md:order-2">
-					<a href=" " class="text-gray-900 hover:text-sky-600">
+					<a href=" " class="text-white hover:text-sky-600">
 						<span class="sr-only">Facebook</span>
 						<svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path fill-rule="evenodd"
@@ -175,7 +175,7 @@
 						</svg>
 					</a>
 
-					<a href=" " class="text-gray-900 hover:text-sky-600">
+					<a href=" " class="text-white hover:text-sky-600">
 						<span class="sr-only">Twitter</span>
 						<svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path
@@ -183,7 +183,7 @@
 						</svg>
 					</a>
 
-					<a href="" class="text-gray-900 hover:text-sky-600">
+					<a href="" class="text-white hover:text-sky-600">
 						<span class="sr-only">YouTube</span>
 						<svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path fill-rule="evenodd"
@@ -193,12 +193,12 @@
 					</a>
 				</div>
 				<div>
-					<p class="mt-8 mb-2 text-base leading-5 text-black md:order-1 md:mt-0 font-family-class">&copy;
+					<p class="mt-8 mb-2 text-base leading-5 text-white md:order-1 md:mt-0 font-family-class">&copy;
 						Copyright
 						Sachcha Prayas
 						- All rights reserved.</p>
 
-					<p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-black font-family-class">
+					<p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-white font-family-class">
 						built with 💙 by <a
 							href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
 							target="_blank" class="li-text-color  hover:text-orange-600 hover:underline">Tech4Good
