--- a/index.html
+++ b/index.html
@@ -139,10 +139,8 @@
 					<!-- 1111 -->
 					<div class="mt-2 xl:mt-0 max-w-xl">
 						<h3 class="text-lg font-semibold leading-6 text-white">Donate Now to Sachcha Prayas</h3>
-						<p class="mt-2 text-baseleading-6 text-white font-family-class">Lorem ipsum dolor sit, amet
-							consectetur adipisicing elit. Aperiam itaque dignissimos aliquid eaque modi error
-							accusantium tenetur dolor accusamus. Doloremque officiis expedita porro incidunt libero
-							dolores quis omnis nobis iusto.
+						<p class="mt-2 text-baseleading-6 text-white font-family-class">Near to Police Chauki Bus Stand,
+							Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482056
 
 							<a href="donate.html" class="text-orange-600 hover:text-sky-600 hover:underline">Donate
 								online.</a>
@@ -153,18 +151,17 @@
 					<!-- 22222 -->
 					<div class="mt-2 xl:mt-0 text-white">
 						<h3 class="text-lg font-semibold leading-6 ">Contact Us</h3>
-						<p class="mt-2 text-baseleading-6 font-family-class"> Demo</p>
-						<p class="mt-2 text-baseleading-6 font-family-class">Madhya Pradesh</p>
-						<p class="mt-2 text-baseleading-6 font-family-class"> 653627282</p>
-						<p class="mt-2 text-baseleading-6 font-family-class">@gmail.com</p>
+						<p class="mt-2 text-baseleading-6 font-family-class"> +91-9424708153,6263797445</p>
+						<p class="mt-2 text-baseleading-6 font-family-class">prayasjbp23@yahoo.in</p>
+						<p class="mt-2 text-baseleading-6 font-family-class"> khanparwez590@gmail.com</p>
+						<!-- <p class="mt-2 text-baseleading-6 font-family-class">@gmail.com</p> -->
 
 					</div>
 				</div>
 			</div>
 
 
-			<div
-				class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
+			<div class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
 				<div class="flex space-x-6 md:order-2">
 					<a href=" " class="text-white hover:text-sky-600">
 						<span class="sr-only">Facebook</span>
