changed logo, updated footer

--- a/donate.html
+++ b/donate.html
@@ -7,8 +7,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 	<link href="output.css" rel="stylesheet">
 
-    <title>Sachcha Prayas</title>
-	<link rel="icon" type="image/x-icon" href="public/img/Nivethan-icon.png" />
+	<title>Sachcha Prayas</title>
+	<link rel="icon" type="image/x-icon" href="public/image/logo.png" />
 </head>
 
 <body class="bg-white font-sans leading-normal tracking-normal font-serif">
@@ -21,7 +21,7 @@
             <div class="flex flex-row items-center justify-between">
 
                 <a href="index.html"><img
-                    src="./logo/image 74.png"
+                    src="public/image/logo.png"
                     alt="logo" class="h-full w-20"></a>
 
                     
@@ -74,19 +74,19 @@
 
 
     <!-- footer  -->
-    <footer class="bg-gray-300 p-4" aria-labelledby="footer-heading">
-		<h2 id="footer-heading" class="sr-only">Footer</h2>
-		<div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-8 pt-2 lg:pt-12">
+    
+	<!-- footer  -->
+	<footer class="header-background p-4 text-white" aria-labelledby="footer-heading">
+		<!-- <h2 id="footer-heading" class="sr-only">Footer</h2> -->
+		<div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-8 pt-2 lg:pt-12 text-white">
 			<div class="">
-				<div class="flex flex-col lg:flex-row justify-center lg:gap-20">
+				<div class="flex flex-col lg:flex-row justify-between lg:gap-20 gap-12">
 
 					<!-- 1111 -->
 					<div class="mt-2 xl:mt-0 max-w-xl">
-						<h3 class="text-lg font-semibold leading-6 text-color">Donate Now to Sachcha Prayas</h3>
-						<p class="mt-2 text-baseleading-6 text-black font-family-class">Lorem ipsum dolor sit, amet
-							consectetur adipisicing elit. Aperiam itaque dignissimos aliquid eaque modi error
-							accusantium tenetur dolor accusamus. Doloremque officiis expedita porro incidunt libero
-							dolores quis omnis nobis iusto.
+						<h3 class="text-lg font-semibold leading-6 text-white">Donate Now to Sachcha Prayas</h3>
+						<p class="mt-2 text-baseleading-6 text-white font-family-class">Near to Police Chauki Bus Stand,
+							Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482056
 
 							<a href="donate.html" class="text-orange-600 hover:text-sky-600 hover:underline">Donate
 								online.</a>
@@ -95,22 +95,21 @@
 					</div>
 
 					<!-- 22222 -->
-					<div class="mt-2 xl:mt-0">
-						<h3 class="text-lg font-semibold leading-6 text-color">Contact Us</h3>
-						<p class="mt-2 text-baseleading-6 text-black font-family-class"> Demo</p>
-						<p class="mt-2 text-baseleading-6 text-black font-family-class">Madhya Pradesh</p>
-						<p class="mt-2 text-baseleading-6 text-black font-family-class"> 653627282</p>
-						<p class="mt-2 text-baseleading-6 text-black font-family-class">@gmail.com</p>
+					<div class="mt-2 xl:mt-0 text-white">
+						<h3 class="text-lg font-semibold leading-6 ">Contact Us</h3>
+						<p class="mt-2 text-baseleading-6 font-family-class"> +91-9424708153,6263797445</p>
+						<p class="mt-2 text-baseleading-6 font-family-class">prayasjbp23@yahoo.in</p>
+						<p class="mt-2 text-baseleading-6 font-family-class"> khanparwez590@gmail.com</p>
+						<!-- <p class="mt-2 text-baseleading-6 font-family-class">@gmail.com</p> -->
 
 					</div>
 				</div>
-
-
 			</div>
-			<div
-				class="mt-16 border-t border-black/20 pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
+
+
+			<div class="mt-16 border-t border-white pt-8 sm:mt-20 md:flex md:items-center md:justify-between lg:mt-8">
 				<div class="flex space-x-6 md:order-2">
-					<a href=" " class="text-gray-900 hover:text-sky-600">
+					<a href=" " class="text-white hover:text-sky-600">
 						<span class="sr-only">Facebook</span>
 						<svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path fill-rule="evenodd"
@@ -119,7 +118,7 @@
 						</svg>
 					</a>
 
-					<a href=" " class="text-gray-900 hover:text-sky-600">
+					<a href=" " class="text-white hover:text-sky-600">
 						<span class="sr-only">Twitter</span>
 						<svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path
@@ -127,7 +126,7 @@
 						</svg>
 					</a>
 
-					<a href="" class="text-gray-900 hover:text-sky-600">
+					<a href="" class="text-white hover:text-sky-600">
 						<span class="sr-only">YouTube</span>
 						<svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path fill-rule="evenodd"
@@ -137,12 +136,12 @@
 					</a>
 				</div>
 				<div>
-					<p class="mt-8 mb-2 text-base leading-5 text-black md:order-1 md:mt-0 font-family-class">&copy;
+					<p class="mt-8 mb-2 text-base leading-5 text-white md:order-1 md:mt-0 font-family-class">&copy;
 						Copyright
 						Sachcha Prayas
 						- All rights reserved.</p>
 
-					<p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-black font-family-class">
+					<p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-white font-family-class">
 						built with 💙 by <a
 							href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
 							target="_blank" class="li-text-color  hover:text-orange-600 hover:underline">Tech4Good
