--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<title>Sachcha Prayas</title>
 	<link rel="icon" type="image/x-icon" href="public/image/logo.png" />
-	
+
 
 </head>
 
@@ -98,36 +98,83 @@
 	<!-- header end -->
 
 
+	<!-- hero image -->
+	<section>
+		<div class="w-full ">
+			<img class="w-full h-96"
+				src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2YujsRG5O3hKByA32l0c0iy7fzASgQuclWtMxhNvWCg&s"
+				alt="">
+		</div>
+	</section>
+
 	<!-- Main body  -->
-	<section id="about">
+	<section>
+		<div class="lg:px-6 px-4 lg:py-12 py-4 bg-gray-50 text-gray-800  lg:text-left container mx-auto mt-4 lg:mt-0">
 
-		<div class="lg:px-6 px-4 lg:py-12 py-4 bg-gray-50 text-gray-800  lg:text-left">
+			<h1 class="lg:text-3xl text-lg font-semibold text-color capitalize lg:text-4xl text-base">
+				Demo
+			</h1>
 
-			<div class="container mx-auto ">
-				<div class="">
-					<!-- <div class="mb-12 lg:mb-0 sm:place-self-center">
-						<img src="public/img/logo2.webp" class="h-full w-full rounded-lg drop-shadow-2xl"
-							alt="logo 2 Img" />
-					</div> -->
-					<div class="mt-4 lg:mt-0">
-						<h1 class="lg:text-3xl text-lg font-semibold text-color capitalize lg:text-4xl p-2 text-base">
-							Demo
-						</h1>
-						<p
-							class="font-family-class  mb-6 font-light text-black font-thin md:text-lg lg:text-xl  lg:p-6 p-2">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cupiditate nemo ratione
-							aperiam nesciunt labore nobis nam dolore sunt! Hic qui, nihil facilis sit quas consequuntur
-							aperiam consequatur officia beatae. </p>
-
-					</div>
-
-				</div>
-			</div>
+			<p class="font-family-class  mb-6 font-light text-black font-thin md:text-lg lg:text-xl">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cupiditate nemo ratione
+				aperiam nesciunt labore nobis nam dolore sunt! Hic qui, nihil facilis sit quas consequuntur
+				aperiam consequatur officia beatae.
+			</p>
 		</div>
 	</section>
 	<!-- Main body end  -->
 
 
+	<!-- mission vision section   -->
+	<section>
+		<div class="mx-auto max-w-8xl container lg:px-6 px-4 py-12">
+
+			<dl class="grid  grid-cols-1 gap-x-8 gap-y-10  md:grid-cols-2 lg:grid-cols-3">
+				<!-- 111 -->
+				<div class="relative p-4  xl:p-8 bg-gray-200 ">
+					<dt class="font-semibold leading-7">
+						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Mission
+						</p>
+					</dt>
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Lorem ipsum, dolor sit amet consectetur
+						adipisicing elit. Corporis dicta, animi, quaerat ullam cum porro ipsam doloremque ad saepe, sed
+						alias in labore beatae est nam tempora perspiciatis officiis vel!</dd>
+				</div>
+
+				<!-- 2222 -->
+				<div class="relative p-4  xl:p-8 bg-gray-200">
+					<dt class=" font-semibold leading-7 ">
+						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Vision
+						</p>
+					</dt>
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Lorem ipsum dolor sit amet consectetur,
+						adipisicing elit. Nemo magnam a, ex possimus veniam, tempora at quam repellat quos doloremque
+						mollitia veritatis iure temporibus dolores! Eveniet delectus facere ea. Perferendis?</dd>
+				</div>
+
+				<!-- 33333 -->
+				<div class="relative p-4  xl:p-8 bg-gray-200">
+					<dt class=" font-semibold leading-7 ">
+						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">
+							Objective
+						</p>
+					</dt>
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Lorem ipsum dolor, sit amet consectetur
+						adipisicing elit. Magni illo iusto, repellendus ullam deleniti molestias molestiae id quas,
+						dolore soluta ducimus minima eos perspiciatis nam omnis ipsa animi. Assumenda, porro!</dd>
+				</div>
+
+			</dl>
+		</div>
+	</section>
+	<!--mission end  -->
+
+	<section>
+		<div class="container mx-auto flex items-center justify-center py-12">
+			<img class="w-48 h-40"
+			src="https://graph.org/file/b08efc79be3b03add8134.jpg" alt="">
+		</div>
+	</section>
 
 
 	<!-- footer  -->
