--- a/our-work.html
+++ b/our-work.html
@@ -64,12 +64,107 @@
 	<!-- body -->
 
 	<div>
-		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur fugit vitae quis ullam voluptates
-		corporis, voluptatum quo, nemo dignissimos adipisci rem eos commodi placeat neque, nesciunt earum quasi?
-		Excepturi, et?
-		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, temporibus provident sint laborum reprehenderit
-		error illum ipsam minima deleniti labore delectus, quidem, veniam nihil cumque magnam eaque voluptas aut
-		sapiente.
+		<div class="px-6 py-12 back-color-dark text-gray-800 text-center lg:text-left my-5">
+			<div class="container mx-auto xl:px-8">
+				<div class="grid lg:grid-cols-2 gap-6 flex items-center justify-center">
+
+					<div class="mt-12 lg:mt-0">
+						<h1 class="lg:text-4xl font-bold text-color capitalize  p-2 text-lg ">
+							Samvidhi Sashaktikaran Kendra, Shivpuri
+
+						</h1>
+						<!-- <div class="p-4">
+							<a href="#" class="header-color inline-flex items-center justify-center px-5 py-3 text-base font-semibold text-center text-white border border-gray-300 hover:bg-red-800 focus:ring-4 focus:bg-sky-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+								Legal Aid Clinic
+							</a>
+						</div> -->
+						<p class="max-w-2xl font-medium text-justify lg:text-lg  lg:px-4">
+							Land rights for marginalized communities remain a pressing issue in Shivpuri District,
+							perpetuating socio-economic inequalities and hindering inclusive growth. The center
+							undertakes research projects and provides legal aid to secure land rights to the people,
+							especially the Sahariya Adivasis. The land rights center handles issues pertaining to
+							forest rights, bhoodan land, displacement, and encroachment. The center has extensively
+							used the RTI to promote transparency and accountability at the District level, and have
+							focused on finding local justice solutions through strategic interventions in the
+							administrative and judicial forums.
+						</p>
+					</div>
+
+					<div class="mb-12 lg:mb-0 sm:place-self-center">
+						<img src="./public/image/DSCN2830.JPG" class="h-full w-full rounded-lg drop-shadow-2xl" alt="logo">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="px-6 py-12 header-color text-gray-800 text-center lg:text-left my-5">
+
+			<div class="container mx-auto xl:px-8">
+				<div class="grid lg:grid-cols-2 gap-6 flex items-center justify-center">
+
+					<div class="mb-12 lg:mb-0 sm:place-self-center">
+						<img src="./public/image/DSCN2821.JPG" class="h-full w-full rounded-lg drop-shadow-2xl" alt="logo">
+					</div>
+
+					<div class="mt-12 lg:mt-0">
+						<h1 class="lg:text-4xl font-bold text-second capitalize  p-2 text-lg ">
+							Samvidhi Sashaktikaran Kendra, Gwalior
+
+						</h1>
+
+						<p class="max-w-2xl font-medium text-justify lg:text-lg  lg:px-4">
+							The center enables legal support to navigate through the criminal justice system in one
+							of most crime-prone areas. Gwalior District has one of the highest crime rates in India
+							(NCRB 2020). Crime rates against women are high with 1432 registered cases in 2020
+							(second highest in the state). We work with women, children, dalit and adivasis to
+							secure justice in courts and other forums..
+						</p>
+						<p class="max-w-2xl font-medium text-justify lg:text-lg lg:px-4">
+							We have collaborated with the Government of Madhya Pradesh through the Mahila Bal Vikas
+							to set up legal aid desks at the Women's Police Station, Child Welfare Committee and the
+							Juvenile Justice Board. The center has also extensively worked on prisons rights,
+							setting up weekly legal help desks inside the Gwalior Central Jail.
+
+						</p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+		<div class="px-6 py-12 back-color-dark text-gray-800 text-center lg:text-left my-5">
+
+			<div class="container mx-auto xl:px-8">
+				<div class="grid lg:grid-cols-2 gap-6 flex items-center justify-center">
+
+					<div class="mt-12 lg:mt-0">
+						<h1 class="lg:text-4xl font-bold text-color capitalize  p-2 text-lg ">
+							Samudayak Adhikar Kendra, Malanpur
+
+						</h1>
+
+						<p class="max-w-2xl font-medium text-justify lg:text-lg  lg:px-4">
+							A community center to provide a means to labourers and migrant workers to avail basic
+							entitlements and schemes-hassle free and affordably. Located in Bhind’s industrial belt
+							in Malanpur, SAK acts as a one-stop worker’s facilitation centre to avail basic
+							entitlements and schemes for a large majority of informal workers in the area.
+						</p>
+
+						<p class="max-w-2xl font-medium text-justify lg:text-lg  lg:px-4">
+							Support to avail basic entitlements such as Aadhar, Pan, E-shram, Ayushman, , BOCWL
+							Card, Provident Fund. Information and application for govt. schemes are also
+							facilitated. The 2022-23, with the efforts of our community volunteers, SAK successfully
+							completed more than 1772+ claims and created a direct monetary impact of 16,28,220.
+
+						</p>
+					</div>
+
+
+					<div class="mb-12 lg:mb-0 sm:place-self-center">
+						<img src="./public/image/DSCN3115.JPG" class="h-full w-full rounded-lg drop-shadow-2xl" alt="logo">
+					</div>
+
+				</div>
+			</div>
+		</div>
 	</div>
 
 
