gallery page created, added gallery link to header

--- a/our-work.html
+++ b/our-work.html
@@ -53,6 +53,9 @@
 					href="team.html">Team</a>
 
 				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+					href="gallery.html">Gallery</a>
+
+				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
 					href="donate.html">Donate</a>
 
 			</nav>
@@ -91,7 +94,8 @@
 					</div>
 
 					<div class="mb-12 lg:mb-0 sm:place-self-center">
-						<img src="./public/image/DSCN2830.JPG" class="h-full w-full rounded-lg drop-shadow-2xl" alt="logo">
+						<img src="./public/image/DSCN2830.JPG" class="h-full w-full rounded-lg drop-shadow-2xl"
+							alt="logo">
 					</div>
 				</div>
 			</div>
@@ -102,7 +106,8 @@
 				<div class="grid lg:grid-cols-2 gap-6 flex items-center justify-center">
 
 					<div class="mb-12 lg:mb-0 sm:place-self-center">
-						<img src="./public/image/DSCN2821.JPG" class="h-full w-full rounded-lg drop-shadow-2xl" alt="logo">
+						<img src="./public/image/DSCN2821.JPG" class="h-full w-full rounded-lg drop-shadow-2xl"
+							alt="logo">
 					</div>
 
 					<div class="mt-12 lg:mt-0">
@@ -159,7 +164,8 @@
 
 
 					<div class="mb-12 lg:mb-0 sm:place-self-center">
-						<img src="./public/image/DSCN3115.JPG" class="h-full w-full rounded-lg drop-shadow-2xl" alt="logo">
+						<img src="./public/image/DSCN3115.JPG" class="h-full w-full rounded-lg drop-shadow-2xl"
+							alt="logo">
 					</div>
 
 				</div>
@@ -170,7 +176,7 @@
 
 	<!-- footer  -->
 
-	
+
 	<!-- footer  -->
 	<footer class="header-background p-4 text-white" aria-labelledby="footer-heading">
 		<!-- <h2 id="footer-heading" class="sr-only">Footer</h2> -->
