--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
 					href="our-work.html">Our Work</a>
 				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
 					href="team.html">Team</a>
+
+				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+					href="gallery.html">Gallery</a>
+
 				<a class="text-white px-4 py-2 mt-2 text-base font-semibold bg-transparent rounded-lg hover:text-black hover:bg-gray-50    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
 					href="donate.html">Donate</a>
 
@@ -171,8 +175,7 @@
 
 	<section>
 		<div class="container mx-auto flex items-center justify-center py-12">
-			<img class="w-48 h-40"
-			src="https://graph.org/file/b08efc79be3b03add8134.jpg" alt="">
+			<img class="w-48 h-40" src="https://graph.org/file/b08efc79be3b03add8134.jpg" alt="">
 		</div>
 	</section>
 
