--- a/gallery.html
+++ b/gallery.html
@@ -360,7 +360,7 @@
                     <div class="mt-2 xl:mt-0 max-w-xl">
                         <h3 class="text-lg font-semibold leading-6 text-white">Donate Now to Sachcha Prayas</h3>
                         <p class="mt-2 text-baseleading-6 text-white font-family-class">Near to Police Chauki Bus Stand,
-                            Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482056
+                            Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
 
                             <a href="donate.html" class="text-orange-600 hover:text-sky-600 hover:underline">Donate
                                 online.</a>
@@ -371,10 +371,8 @@
                     <!-- 22222 -->
                     <div class="mt-2 xl:mt-0 text-white">
                         <h3 class="text-lg font-semibold leading-6 ">Contact Us</h3>
-                        <p class="mt-2 text-baseleading-6 font-family-class"> +91-9424708153,6263797445</p>
+                        <p class="mt-2 text-baseleading-6 font-family-class"> +91-9424708153, 6263797445</p>
                         <p class="mt-2 text-baseleading-6 font-family-class">prayasjbp23@yahoo.in</p>
-                        <p class="mt-2 text-baseleading-6 font-family-class"> khanparwez590@gmail.com</p>
-                        <!-- <p class="mt-2 text-baseleading-6 font-family-class">@gmail.com</p> -->
 
                     </div>
                 </div>
@@ -400,14 +398,14 @@
                         </svg>
                     </a>
 
-                    <a href="" class="text-white hover:text-sky-600">
+                    <!-- <a href="" class="text-white hover:text-sky-600">
                         <span class="sr-only">YouTube</span>
                         <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                             <path fill-rule="evenodd"
                                 d="M19.812 5.418c.861.23 1.538.907 1.768 1.768C21.998 8.746 22 12 22 12s0 3.255-.418 4.814a2.504 2.504 0 0 1-1.768 1.768c-1.56.419-7.814.419-7.814.419s-6.255 0-7.814-.419a2.505 2.505 0 0 1-1.768-1.768C2 15.255 2 12 2 12s0-3.255.417-4.814a2.507 2.507 0 0 1 1.768-1.768C5.744 5 11.998 5 11.998 5s6.255 0 7.814.418ZM15.194 12 10 15V9l5.194 3Z"
                                 clip-rule="evenodd" />
                         </svg>
-                    </a>
+                    </a> -->
                 </div>
                 <div>
                     <p class="mt-8 mb-2 text-base leading-5 text-white md:order-1 md:mt-0 font-family-class">&copy;
