donate now color and hover color

--- a/our-work.html
+++ b/our-work.html
@@ -190,7 +190,7 @@
 						<p class="mt-2 text-baseleading-6 text-white font-family-class">Near to Police Chauki Bus Stand,
 							Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
 
-							<a href="donate.html" class="text-orange-600 hover:text-sky-600 hover:underline">Donate
+							<a href="donate.html" class=" hover:donate-color hover:text-white hover:underline">Donate
 								online.</a>
 						</p>
 
@@ -245,9 +245,9 @@
 					<p class="mt-12 text-sm leading-5  md:order-1 md:mt-0 text-white font-family-class">
 						built with 💙 by <a
 							href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
-							target="_blank" class="li-text-color  hover:text-orange-600 hover:underline">Tech4Good
+							target="_blank" class="li-text-color  hover: hover:donate-color hover:underline">Tech4Good
 							Fellows</a> &
-						Hosted Freely on <a href="" class="li-text-color  hover:text-orange-600 hover:underline">Github
+						Hosted Freely on <a href="" class="li-text-color  hover: hover:donate-color hover:underline">Github
 							Pages</a>
 						</a>
 					</p>
