hamburger color, shadow in team and gallery, donate in index

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<meta name="description" content="	Nivethan Trust is a local non-profit from Madurai, dedicated to help those in need in the
-							fields of health, education and food." />
+	<meta name="description" content="Lorem ipsum" />
 
 	<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 	<link href="output.css" rel="stylesheet">
@@ -32,7 +31,7 @@
 
 				<button aria-label="hamberger" id="hamberger-btn"
 					class="md:hidden rounded-lg focus:outline-none focus:shadow-outline" @click="open = !open">
-					<svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6 heading-text-color">
+					<svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6 text-white">
 						<path x-show="!open" fill-rule="evenodd"
 							d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z"
 							clip-rule="evenodd"></path>
@@ -119,7 +118,7 @@
 				Demo
 			</h1>
 
-			<p class="font-family-class  mb-6 font-light text-black font-thin md:text-lg lg:text-xl">
+			<p class="font-family-class  mb-6 ">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cupiditate nemo ratione
 				aperiam nesciunt labore nobis nam dolore sunt! Hic qui, nihil facilis sit quas consequuntur
 				aperiam consequatur officia beatae.
@@ -135,7 +134,7 @@
 
 			<dl class="grid  grid-cols-1 gap-x-8 gap-y-10  md:grid-cols-2 lg:grid-cols-3">
 				<!-- 111 -->
-				<div class="relative p-4  xl:p-8 bg-gray-200 ">
+				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg drop-shadow-lg">
 					<dt class="font-semibold leading-7">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Mission
 						</p>
@@ -146,7 +145,7 @@
 				</div>
 
 				<!-- 2222 -->
-				<div class="relative p-4  xl:p-8 bg-gray-200">
+				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg drop-shadow-lg">
 					<dt class=" font-semibold leading-7 ">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Vision
 						</p>
@@ -157,7 +156,7 @@
 				</div>
 
 				<!-- 33333 -->
-				<div class="relative p-4  xl:p-8 bg-gray-200">
+				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg drop-shadow-lg">
 					<dt class=" font-semibold leading-7 ">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">
 							Objective
@@ -174,9 +173,10 @@
 	<!--mission end  -->
 
 	<section>
-		<div class="container mx-auto flex items-center justify-center py-12">
-			<img class="w-48 h-40" src="https://graph.org/file/b08efc79be3b03add8134.jpg" alt="">
-		</div>
+			<div class="mx-auto flex px-4 py-2 donate w-56 my-5 drop-shadow-lg rounded-lg">
+				<a class="text-3xl text-white font-bold flex items-center px-2" href="">Donate</a>
+				<img class="w-20 h-16 px-2" src="public/image/donate-logo.png" alt="">
+			</div>
 	</section>
 
 
@@ -193,7 +193,7 @@
 						<p class="mt-2 text-baseleading-6 text-white font-family-class">Near to Police Chauki Bus Stand,
 							Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
 
-							<a href="donate.html" class=" hover:donate-color hover:text-white hover:underline">Donate
+							<a href="donate.html" class="donate-color hover:text-white hover:underline">Donate
 								online.</a>
 						</p>
 
@@ -249,7 +249,8 @@
 							href="https://t4glabs.discourse.group/u?cards=no&group=Tech4Good-Fellows&order=likes_received&period=all"
 							target="_blank" class="li-text-color  hover: hover:donate-color hover:underline">Tech4Good
 							Fellows</a> &
-						Hosted Freely on <a href="" class="li-text-color  hover: hover:donate-color hover:underline">Github
+						Hosted Freely on <a href=""
+							class="li-text-color  hover: hover:donate-color hover:underline">Github
 							Pages</a>
 						</a>
 					</p>
