--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 			<dl class="grid  grid-cols-1 gap-x-8 gap-y-10  md:grid-cols-2 lg:grid-cols-3">
 				<!-- 111 -->
-				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg drop-shadow-lg">
+				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
 					<dt class="font-semibold leading-7">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Mission
 						</p>
@@ -145,7 +145,7 @@
 				</div>
 
 				<!-- 2222 -->
-				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg drop-shadow-lg">
+				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
 					<dt class=" font-semibold leading-7 ">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Vision
 						</p>
@@ -156,7 +156,7 @@
 				</div>
 
 				<!-- 33333 -->
-				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg drop-shadow-lg">
+				<div class="relative p-4  xl:p-8 bg-gray-200 rounded-lg shadow-xl">
 					<dt class=" font-semibold leading-7 ">
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">
 							Objective
@@ -173,28 +173,31 @@
 	<!--mission end  -->
 
 	<section>
-			<div class="mx-auto flex px-4 py-2 donate w-56 my-5 drop-shadow-lg rounded-lg">
-				<a class="text-3xl text-white font-bold flex items-center px-2" href="">Donate</a>
+		<div class="mx-auto flex px-4 py-2 donate w-56 my-5 shadow-xl rounded-lg">
+			<a href="donate.html" class="flex">
+				<h1 class="text-3xl text-white font-bold flex items-center px-2">Donate</h1>
 				<img class="w-20 h-16 px-2" src="public/image/donate-logo.png" alt="">
-			</div>
+			</a>
+		</div>
 	</section>
 
 
 	<!-- footer  -->
 	<footer class="header-background p-4 text-white" aria-labelledby="footer-heading">
-		<!-- <h2 id="footer-heading" class="sr-only">Footer</h2> -->
+
 		<div class="mx-auto max-w-7xl px-6 pb-4 sm:pt-24 lg:px-8 pt-2 lg:pt-12 text-white">
+
 			<div class="">
 				<div class="flex flex-col lg:flex-row justify-between lg:gap-20 gap-12">
 
 					<!-- 1111 -->
 					<div class="mt-2 xl:mt-0 max-w-xl">
-						<h3 class="text-lg font-semibold leading-6 text-white">Donate Now to Sachcha Prayas</h3>
+						<h3 class="text-lg font-semibold leading-6 text-white">Address</h3>
 						<p class="mt-2 text-baseleading-6 text-white font-family-class">Near to Police Chauki Bus Stand,
 							Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
 
-							<a href="donate.html" class="donate-color hover:text-white hover:underline">Donate
-								online.</a>
+							<!-- <a href="donate.html" class="donate-color hover:text-white hover:underline">Donate
+								online.</a> -->
 						</p>
 
 					</div>
@@ -214,7 +217,7 @@
 				<div class="flex space-x-6 md:order-2">
 					<a href=" " class="text-white hover:text-sky-600">
 						<span class="sr-only">Facebook</span>
-						<svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+						<svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path fill-rule="evenodd"
 								d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
 								clip-rule="evenodd" />
@@ -223,7 +226,7 @@
 
 					<a href=" " class="text-white hover:text-sky-600">
 						<span class="sr-only">Twitter</span>
-						<svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+						<svg class="h-10 w-10" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 							<path
 								d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
 						</svg>
